--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-23"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-23">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
@@ -9,5 +13,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/Medhani/Downloads/JAVA CRUD APP-20250430T185437Z-001/JAVA CRUD APP/JAR Files/javax.servlet-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Medhani/Downloads/JAVA CRUD APP-20250430T185437Z-001/JAVA CRUD APP/JAR Files/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Medhani/Downloads/JAVA CRUD APP-20250430T185437Z-001/JAVA CRUD APP/JAR Files/jstl-api-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Medhani/Downloads/JAVA CRUD APP-20250430T185437Z-001/JAVA CRUD APP/JAR Files/mysql-connector-java-5.1.48-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Medhani/Downloads/JAVA CRUD APP-20250430T185437Z-001/JAVA CRUD APP/JAR Files/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
